# duo

./: Cargo.toml  LICENSE
src/: accounts.rs  auth.rs  main.rs  rooms.rs  runtime_storage.rs
src/database/entities/: accounts.rs
src/database/queries/: accounts.rs  sessions.rs
src/game/: mod.rs  player.rs  room.rs  rooms.rs
src/game/gameplay/: card.rs  mod.rs  player.rs
src/game/rooms/: mod.rs  player.rs
src/gateway/: events.rs  mod.rs  payloads.rs  sessions.rs
src/http/: auth.rs  mod.rs  rooms.rs  users.rs
src/http/rooms/: game.rs  mod.rs  player.rs  reimpl.rs
