[package]
name = "duo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
json-patch = "2.0.0"
poem = { version = "3.0.0", features = ["session", "websocket"] }
rand = "0.8.5"
random-string = "1.1.0"
regex = "1.10.4"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }
serde = "1.0.200"
serde-partial = "0.3.1"
serde_json = "1.0.116"
sha256 = "1.5.0"
shuttle = "0.7.1"
shuttle-poem = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.26.0"
