[package]
name = "duo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
poem = { version = "3.1.1", features = ["session", "websocket"] }
rand = "0.8.5"
random-string = "1.1.0"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }
serde = "1.0.210"
serde_json = "1.0.128"
sha256 = "1.5.0"
shuttle = "0.7.1"
shuttle-poem = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.40.0"
